--- a/index.html
+++ b/index.html
@@ -1,49 +1,150 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-md bg-success" data-bs-theme="dark">
-        <div class="container">
-          <a class="navbar-brand fs-3"  href="#">Shrek</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Domů</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">O filmu</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Postavy</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Hodnocení</a>
-              </li>
-            </ul>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-md bg-success" data-bs-theme="dark">
+    <div class="container">
+      <a class="navbar-brand fs-3" href="#">Shrek</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Domů</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">O filmu</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Postavy</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Hodnocení</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <section class="hero py-5 bg-success-subtle">
+    <div class="container py-5 text-center">
+      <h1 class="display-1 mb-3">Shrek: Legenda našeho dětství</h1>
+      <p class="lead">
+        Vratte se zpět do svých dětských let a prožijte kouzelné okamžiky, s touto nestarnoucí legendou.
+      </p>
+      <a href="#" class="btn btn-success btn-lg">Vyrazit si bažiny</a>
+    </div>
+
+  </section>
+
+  <section class="about py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-xl-8">
+          <img class="img-fluid" src="https://i.pinimg.com/originals/0a/bb/e5/0abbe546e479edc1eb62f5a8ccd66328.jpg"
+            alt="">
+
+          <div class="row g-3">
+            <div class="col-6 col-lg-2">
+              <img class="img-fluid"
+                src="https://www.nbcstore.com/cdn/shop/products/SHREK-SS-63-MF1_grande.jpg?v=1693905182" alt="">
+            </div>
+            <div class="col-6 col-lg-2">
+              <img class="img-fluid"
+                src="https://www.nbcstore.com/cdn/shop/products/SHREK-SS-63-MF1_grande.jpg?v=1693905182" alt="">
+            </div>
+            <div class="col-6 col-lg-2">
+              <img class="img-fluid"
+                src="https://www.nbcstore.com/cdn/shop/products/SHREK-SS-63-MF1_grande.jpg?v=1693905182" alt="">
+            </div>
+            <div class="col-6 col-lg-2">
+              <img class="img-fluid"
+                src="https://www.nbcstore.com/cdn/shop/products/SHREK-SS-63-MF1_grande.jpg?v=1693905182" alt="">
+            </div>
+
           </div>
         </div>
-      </nav>
-
-      <section class="hero py-5 bg-success-subtle">
-        <div class="container">
-            <h1 class="display-1 mb-3">Shrek: Legenda našeho dětství</h1>
-            <p class="lead">
-                Vratte se zpět do svých dětských let a prožijte kouzelné okamžiky, s touto nestarnoucí legendou.
-            </p>
-            <a href="#" class="btn btn-success btn-lg">Vyrazit si bažiny</a>
+        <div class="col-md-6 col-xl-4">
+          <h2 class="h1">Kdo je Shrek?</h2>
+          <p>
+            Shrek, zelený obr s tykadly mimozemšťanů, žije sice docela sám, ale šťastně ve svém domku na samotě u lesa
+            až do chvíle,
+            kdy je doslova přepaden nekonečným zástupem známých i méně známých pohádkových postaviček, které byly
+            vyhoštěny z království
+            nevzhledného a zakyslého Lorda Farquaada. Ve snaze zjednat pořádek a hlavně vrátit klid do svého příbytku
+            Shrek Farquaadovi
+            slíbí, že vysvobodí ze zajetí obávaného draka krásnou princeznu Fionu a přivede mu ji, aby se stala jeho
+            ženou. S pomocí
+            mazaného oslíka, ochotného pro Shreka udělat cokoli, jen ne zmlknout aspoň na okamžik, obr svůj slib splní,
+            jenže pak se to
+            nějak podivně zamotá, zaplete a zkomplikuje, takže je všechno nakonec úplně a docela jinak...
+          </p>
+          <p>
+            Shrek je zlobr (zlý obr), který si až na občasné útoky vesničanů žije poklidně ve svém útulném močálu, dokud
+            mu do jeho obýváku
+            nenažene zakrslý Lord Farquaad všechny pohádkové bytosti, na které si jen vzpomenete. Shrek se rozhodne jít
+            si stěžovat přímo
+            do Farquadova sídla, doprovázen nesmírně ukecaným oslem Oslem. Farquaad mu slíbí vrátit zpět jeho močál pod
+            podmínkou, že pro
+            něj Shrek vysvobodí krásnou princeznu Fionu z hradu hlídaného obrovským drakem.
+          </p>
+          <p>
+            V ideálním případě tomu je tak, že rytíř v lesklé zbroji přicválá na majestátním koni, přemůže draka,
+            polibkem vysvobodí
+            princeznu, kdy odměnou mu pak je princeznina ruka a půl království. Avšak Shrek, zlobr z bažiny, kterého
+            doprovází upovídaný
+            osel, zatřesením probere princeznu, k tomu draka nechá žít a odměnou mu je návrat do své bažiny. Nebo je ve
+            Shrekovi více,
+            než se zdá, kdy tím pravým zachráncem je právě on?
+          </p>
         </div>
+      </div>
+    </div>
+  </section>
 
-      </section>
+  <section class="postavy py-5">
+    <div class="container">
+      <h2 class="h1 text-center mb-5">Postavy</h2>
+      <div class="row g-3">
+        <div class="col-md-6 col-xl-3">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h3 class="card-title">Card title</h3>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s
+                content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-xl-3">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h3 class="card-title">Card title</h3>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                card’s
+                content.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    
-    </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
+
+</body>
+
 </html>
